[project]
name = "jsc-digests"
version = "0.0.1"
description = "JSC Digests - Convert News to Audio Summaries with SparkTTS."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "JScdroidDev", email = "19742131+jscoobyced@users.noreply.github.com"}
]
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.15.0",
    "einops>=0.8.2",
    "einx>=0.4.3",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=1.19.0",
    "omegaconf>=2.3.1",
    "openai>=2.41.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "transformers>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/jscoobyced/jsc-digests"
"Bug Tracker" = "https://github.com/jscoobyced/jsc-digests/issues"
